# email-generator-ai

./: .env.template  .gitignore  Estructura del Repositorio  Futuras mejoras.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml  tests.yml
docs/: API_REFERENCE.md  EXAMPLES.md  Ejemplo de PROMPT.md  Ejemplo de Salida.md  STYLE_GUIDE.md
scripts/: deploy.sh  generate_docs.sh  setup_environment.sh
src/: main.py
src/generator/: __init__.py  api_client.py  exceptions.py  postprocessor.py  prompts.py
src/utils/: logging.py
tests/: __init__.py  conftest.py  test_api_client.py  test_postprocessor.py  test_prompts.py
tests/integration/: test_end_to_end.py
