[project]
name = "email-generator-ai"
version = "0.1.0"
authors = [{ name = "Tu Nombre", email = "tu@email.com" }]
description = "Generador de correos con IA usando GPT-4"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",  # Logging profesional
    "pydantic>=2.0"  # Validación de datos
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "flake8"]  # Dev tools

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
